Center Image, no ugly border

--- a/style.css
+++ b/style.css
@@ -3,9 +3,8 @@
     font-family: 'Quicksand';
 }
 
-header {
-    display: block;
-    border-bottom: 1px dashed #ccc;
-    
+html {
+    width: 100%;
+    height: 100%;
+    background: #48abff url('public/image/numpad.png') center center no-repeat;
 }
-
